[122859] Added Icon Files missing in M2 oda.flatfile.ui download build

--- a/plugins/org.eclipse.datatools.connectivity.oda.flatfile.ui/build.properties
+++ b/plugins/org.eclipse.datatools.connectivity.oda.flatfile.ui/build.properties
@@ -3,4 +3,5 @@ output.oda-flatfileui.jar = bin/
 bin.includes = plugin.xml,\
                oda-flatfileui.jar,\
                about.html,\
-               plugin*.properties
+               plugin*.properties,\
+               icons/
