SQL Debugger framework M3I1

--- a/plugins/org.eclipse.datatools.sqltools.debugger.core/build.properties
+++ b/plugins/org.eclipse.datatools.sqltools.debugger.core/build.properties
@@ -2,6 +2,8 @@ source.sqldebugcore.jar = src/
 output.sqldebugcore.jar = bin/
 bin.includes = META-INF/,\
                sqldebugcore.jar,\
+               .,\
+               plugin.xml,\
                about.html
 
 jars.extra.classpath =
