--- a/plugins/org.eclipse.datatools.sqltools.db.derby/build.properties
+++ b/plugins/org.eclipse.datatools.sqltools.db.derby/build.properties
@@ -1,4 +1,16 @@
 source.derby.jar = src/
 output.derby.jar = bin/
 bin.includes = plugin.xml,\
-               derby.jar
+               .,\
+               derby.jar,\
+               META-INF/,\
+               about.html
+
+jars.extra.classpath =
+src.dir =		src/
+plugin.version =	0.7.0
+javadoc.dir =		doc/api/
+download.dir =		./download/
+javac.source =		1.4
+javac.target =		1.4
+
