--- a/plugins/org.eclipse.datatools.sqltools.db.generic/build.properties
+++ b/plugins/org.eclipse.datatools.sqltools.db.generic/build.properties
@@ -1,5 +1,17 @@
 source.. = src/
 output.. = bin/
-bin.includes = META-INF/,\
+bin.includes = plugin.xml,\
                .,\
-               plugin.xml
+               genericdb.jar,\
+               META-INF/,\
+               about.html
+
+jars.extra.classpath =
+src.dir =		src/
+plugin.version =	0.7.0
+javadoc.dir =		doc/api/
+download.dir =		./download/
+javac.source =		1.4
+javac.target =		1.4
+
+
