--- a/tests/org.eclipse.datatools.sqltools.db.generic.test/build.properties
+++ b/tests/org.eclipse.datatools.sqltools.db.generic.test/build.properties
@@ -1,4 +1,13 @@
 source.. = src/
 output.. = bin/
 bin.includes = META-INF/,\
-               .
+               .,\
+               about.html,\
+               genericdbtest.jar
+jars.extra.classpath =
+src.dir =		src/
+plugin.version =	0.7.0
+javadoc.dir =		doc/api/
+download.dir =		./download/
+javac.source =		1.4
+javac.target =		1.4
