--- a/plugins/org.eclipse.datatools.sqltools.common.ui/build.properties
+++ b/plugins/org.eclipse.datatools.sqltools.common.ui/build.properties
@@ -1,4 +1,14 @@
-source.. = src/
-output.. = bin/
+source.sqltoolscommonui.jar = src/
+output.sqltoolscommonui.jar = bin/
 bin.includes = META-INF/,\
-               .
+               sqltoolscommonui.jar,\
+               icons/,\
+               about.html
+
+jars.extra.classpath =
+src.dir = src/
+plugin.version =	0.7.0
+javadoc.dir =		doc/api/
+download.dir =		./download/
+javac.source =		1.4
+javac.target =		1.4
