[122924] Update M3_I010606 files for build.

--- a/plugins/org.eclipse.datatools.sqltools.plan/build.properties
+++ b/plugins/org.eclipse.datatools.sqltools.plan/build.properties
@@ -1,5 +1,15 @@
-source.. = src/
-output.. = bin/
+source.sqlplan.jar = src/
+output.sqlplan.jar = bin/
 bin.includes = META-INF/,\
-               .,\
-               plugin.xml
+               sqlplan.jar,\
+               plugin.xml,\
+               about.html,\
+               schema/
+
+jars.extra.classpath =
+src.dir =		src/
+plugin.version =	0.7.0
+javadoc.dir =		doc/api/
+download.dir =		./download/
+javac.source =		1.4
+javac.target =		1.4
