[122924] Update M3_I010606 files for build.

--- a/plugins/org.eclipse.datatools.sqltools.db.generic/build.properties
+++ b/plugins/org.eclipse.datatools.sqltools.db.generic/build.properties
@@ -1,10 +1,11 @@
-source.. = src/
-output.. = bin/
+source.genericdb.jar = src/
+output.genericdb.jar = bin/
 bin.includes = plugin.xml,\
-               .,\
+               genericdb.jar,\
                genericdb.jar,\
                META-INF/,\
-               about.html
+               about.html,\
+               grammar/
 
 jars.extra.classpath =
 src.dir =		src/
