[122924] Update M3_I010606 files for build.

--- a/plugins/org.eclipse.datatools.sqltools.db.derby/build.properties
+++ b/plugins/org.eclipse.datatools.sqltools.db.derby/build.properties
@@ -1,10 +1,11 @@
-source.derby.jar = src/
-output.derby.jar = bin/
+source.sqlderby.jar = src/
+output.sqlderby.jar = bin/
 bin.includes = plugin.xml,\
                .,\
-               derby.jar,\
+               sqlderby.jar,\
                META-INF/,\
-               about.html
+               about.html,\
+               icons/
 
 jars.extra.classpath =
 src.dir =		src/
