[122924] Update M3_I010606 files for build.

--- a/plugins/org.eclipse.datatools.sqltools.routineeditor/build.properties
+++ b/plugins/org.eclipse.datatools.sqltools.routineeditor/build.properties
@@ -1,10 +1,11 @@
-source.. = src/
-output.. = bin/
+source.routineeditor.jar = src/
+output.routineeditor.jar = bin/
 bin.includes = META-INF/,\
-               .,\
+               routineeditor.jar,\
                plugin.xml,\
                routineeditor.jar,\
-               about.html
+               about.html,\
+               schema/
 jars.extra.classpath =
 src.dir =		src/
 plugin.version =	0.7.0
