[123266] Add build files and adjust build.properties

--- a/plugins/org.eclipse.datatools.modelbase.sql.edit/build.properties
+++ b/plugins/org.eclipse.datatools.modelbase.sql.edit/build.properties
@@ -3,7 +3,7 @@
  * <copyright>
  * </copyright>
  *
- * $Id: build.properties,v 1.3 2005/07/05 20:11:38 lmandel Exp $
+ * $Id: build.properties,v 1.1 2005/08/02 22:56:24 ledunnel Exp $
  */
 -->
 bin.includes = plugin.xml,\
@@ -14,3 +14,11 @@ bin.includes = plugin.xml,\
 jars.compile.order = sqlmodel.edit.jar
 source.sqlmodel.edit.jar = src/
 output.sqlmodel.edit.jar = bin/
+
+jars.extra.classpath =
+src.dir =		src/
+plugin.version =	0.7.0
+javadoc.dir =		doc/api/
+download.dir =		./download/
+javac.source =		1.4
+javac.target =		1.4
