--- a/plugins/org.eclipse.datatools.modelbase.sql.query/build.properties
+++ b/plugins/org.eclipse.datatools.modelbase.sql.query/build.properties
@@ -3,5 +3,12 @@ output.sqlquerymodel.jar = bin/
 bin.includes = plugin.xml,\
                sqlquerymodel.jar,\
                plugin.properties,\
-               META-INF/,\
-               about.html
+               META-INF/
+
+jars.extra.classpath =
+src.dir =		src/
+plugin.version =	0.7.0
+javadoc.dir =		doc/api/
+download.dir =		./download/
+javac.source =		1.4
+javac.target =		1.4
