--- a/plugins/org.eclipse.datatools.modelbase.sql/build.properties
+++ b/plugins/org.eclipse.datatools.modelbase.sql/build.properties
@@ -14,3 +14,11 @@ bin.includes = plugin.xml,\
                sqlmodel.jar,\
                plugin.properties,\
                about.html
+
+jars.extra.classpath =
+src.dir =		src/
+plugin.version =	0.7.0
+javadoc.dir =		doc/api/
+download.dir =		./download/
+javac.source =		1.4
+javac.target =		1.4
