--- a/plugins/org.eclipse.datatools.modelbase.dbdefinition/build.properties
+++ b/plugins/org.eclipse.datatools.modelbase.dbdefinition/build.properties
@@ -13,7 +13,7 @@
  * <copyright>
  * </copyright>
  *
- * $Id: build.properties,v 1.6 2005/07/05 20:12:52 lmandel Exp $
+ * $Id: build.properties,v 1.1 2005/08/02 22:56:23 ledunnel Exp $
  */
 -->
 bin.includes = plugin.xml,\
@@ -21,4 +21,12 @@ bin.includes = plugin.xml,\
                databasedefinition.jar,\
                about.html
 source.databasedefinition.jar = src/
+
+jars.extra.classpath =
+src.dir =		src/
+plugin.version =	0.7.0
+javadoc.dir =		doc/api/
+download.dir =		./download/
+javac.source =		1.4
+javac.target =		1.4
 
