--- a/plugins/org.eclipse.datatools.modelbase.sql.xml.query/build.properties
+++ b/plugins/org.eclipse.datatools.modelbase.sql.xml.query/build.properties
@@ -4,4 +4,12 @@ bin.includes = plugin.xml,\
                META-INF/,\
                sqlxmlquerymodel.jar,\
                META-INF/,\
-               about.html
+               plugin.properties
+
+jars.extra.classpath =
+src.dir =		src/
+plugin.version =	0.7.0
+javadoc.dir =		doc/api/
+download.dir =		./download/
+javac.source =		1.4
+javac.target =		1.4
