[123266] Add build files and adjust build.properties

--- a/plugins/org.eclipse.datatools.connectivity.ui/build.properties
+++ b/plugins/org.eclipse.datatools.connectivity.ui/build.properties
@@ -7,3 +7,11 @@ bin.includes = plugin.xml,\
 jars.compile.order = connectivityui.jar
 source.connectivityui.jar = src/
 output.connectivityui.jar = bin/
+
+jars.extra.classpath =
+src.dir =		src/
+plugin.version =	0.7.0
+javadoc.dir =		doc/api/
+download.dir =		./download/
+javac.source =		1.4
+javac.target =		1.4
