--- a/plugins/org.eclipse.datatools.connectivity.db.generic/build.properties
+++ b/plugins/org.eclipse.datatools.connectivity.db.generic/build.properties
@@ -1,8 +1,14 @@
 bin.includes = META-INF/,\
                plugin.xml,\
                genericdb.jar,\
-               icons/,\
-               about.html
+               icons/
 jars.compile.order = genericdb.jar
 source.genericdb.jar = src/
 output.genericdb.jar = bin/
+src.dir		     = src/
+jars.extra.classpath =
+plugin.version =	0.7.0
+javadoc.dir =		doc/api/
+download.dir =		./download/
+javac.source =		1.4
+javac.target =		1.4
