--- a/plugins/org.eclipse.datatools.connectivity.sqm.core.ui/build.properties
+++ b/plugins/org.eclipse.datatools.connectivity.sqm.core.ui/build.properties
@@ -16,3 +16,11 @@ bin.includes = plugin.xml,\
                .options,\
                about.html
 source.rdb.core.ui.jar = src/
+
+jars.extra.classpath =
+src.dir =		src/
+plugin.version =	0.7.0
+javadoc.dir =		doc/api/
+download.dir =		./download/
+javac.source =		1.4
+javac.target =		1.4
