--- a/plugins/org.eclipse.datatools.connectivity.sqm.server.ui/build.properties
+++ b/plugins/org.eclipse.datatools.connectivity.sqm.server.ui/build.properties
@@ -16,3 +16,11 @@ bin.includes = plugin.xml,\
                about.html
 source.rdb.server.ui.jar = src/
 jars.compile.order = rdb.server.ui.jar
+
+jars.extra.classpath =
+src.dir =		src/
+plugin.version =	0.7.0
+javadoc.dir =		doc/api/
+download.dir =		./download/
+javac.source =		1.4
+javac.target =		1.4
