--- a/plugins/org.eclipse.datatools.connectivity.ui.dse/build.properties
+++ b/plugins/org.eclipse.datatools.connectivity.ui.dse/build.properties
@@ -2,8 +2,15 @@ bin.includes = META-INF/,\
                plugin.xml,\
                dse.jar,\
                icons/,\
-               plugin.properties,\
-               about.html
+               plugin.properties
 jars.compile.order = dse.jar
 source.dse.jar = src/
 output.dse.jar = bin/
+
+jars.extra.classpath =
+src.dir =		src/
+plugin.version =	0.7.0
+javadoc.dir =		doc/api/
+download.dir =		./download/
+javac.source =		1.4
+javac.target =		1.4
