--- a/plugins/org.eclipse.datatools.connectivity/build.properties
+++ b/plugins/org.eclipse.datatools.connectivity/build.properties
@@ -7,6 +7,12 @@ bin.includes = plugin.xml,\
                META-INF/,\
                connectivity.jar
 
-jars.compile.order = connectivity.jar
-source.connectivity.jar = src/
+jars.compile.order 	= connectivity.jar
 output.connectivity.jar = bin/
+jars.extra.classpath =
+src.dir			 = src/
+plugin.version =	0.7.0
+javadoc.dir =		doc/api/
+download.dir =		./download/
+javac.source =		1.4
+javac.target =		1.4
